--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -17,6 +17,5 @@ services:
       INTEGRATION_LISTENING_ADDR: ''
       INTEGRATION_LISTENING_PORT: '8080'
       MATTERMOST_CHANNEL: 'rss-stream'
-    volumes:
-      - feeds.env:/code/feeds.env:rw
-    user: root
+    env_file:
+      - feeds.env
